notes: back-of-the-envelope calculation

--- a/TeX/paper/soc_ext_bibliography.bib
+++ b/TeX/paper/soc_ext_bibliography.bib
@@ -1,13 +1,5 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+% Encoding: UTF-8
 
-%% Created for Marc Fabel at 2020-08-17 13:13:06 +0200 
-
-
-%% Saved with string encoding Unicode (UTF-8) 
-
-
-@comment{jabref-meta: databaseType:bibtex;}
 
 
 
@@ -314,3 +306,51 @@
 	Title = {{The effect of police intelligence on group violence: Evidence from reassignments in Sweden}},
 	Volume = {93},
 	Year = {2009}}
+
+@Article{glaubitz2016kostet,
+  author    = {Glaubitz, Christoffer and Steglich, Frauke and Koch, Malte and Klodt, Henning and Klatt, Thimna and Hausmann, Barbara and Bliesener, Thomas},
+  title     = {{The costs of youth crime in Germany - An empirical contribution}},
+  journal   = {Monatsschrift f{\"u}r Kriminologie und Strafrechtsreform},
+  year      = {2016},
+  volume    = {99},
+  number    = {2},
+  pages     = {123--139},
+  publisher = {Wolters Kluwer},
+}
+
+@Book{miller1996victim,
+  title     = {{Victim Costs and Consequences: A New Look}},
+  publisher = {{US Department of Justice}},
+  year      = {1996},
+  author    = {Miller, Ted and Cohen, Mark and Wiersema, Brian},
+  editor    = {Office of Justice Programs},
+}
+
+@Article{cohen2004willingness,
+  author    = {Cohen, Mark and Rust, Roland and Steen, Sara and Tidd, Simon},
+  title     = {{Willingness-to-pay for crime control programs}},
+  journal   = {{Criminology}},
+  year      = {2004},
+  volume    = {42},
+  number    = {1},
+  pages     = {89--110},
+  publisher = {Wiley Online Library},
+}
+
+@Article{dubourg2005economic,
+  author  = {Dubourg, Richard and Hamed, Joe and Thorns, Jamie and others},
+  title   = {The economic and social costs of crime against individuals and households 2003/04},
+  journal = {{Home Office online report}},
+  year    = {2005},
+  volume  = {30},
+  number  = {05},
+}
+
+@Article{roper2006estimating,
+  author  = {Roper, Tim and Thompson, Andrew},
+  title   = {{Estimating the costs of crime in New Zealand in 2003/04}},
+  journal = {{New Zealand Treasury Working Paper}},
+  year    = {2006},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
