intro: back of the envelope

--- a/TeX/paper/soc_ext_paper.tex
+++ b/TeX/paper/soc_ext_paper.tex
@@ -161,8 +161,10 @@ labelfont={bf}
 		}
 }
 
-\date{\monthyeardate\today}
+% Month year
+%\date{\monthyeardate\today}
 
+\date{Last modified: \today}
 
 
 
@@ -219,7 +221,7 @@ prosperity but also temporary increases in contagion, congestion and crime" from
 
 
 % soccer games and strategy how to estimate causal effect
-The aim of this paper is to undertake an in-depth examination of the effects that public mass exert on criminal behavior. More specifically, the impact of soccer games of the first three leagues of the German football league systems is investigated.
+The aim of this paper is to undertake an in-depth examination of the effects that public mass events exert on criminal behavior. More specifically, the impact of soccer games of the first three leagues of the German football league systems is investigated.
 My results allow me to characterize in full the impact of football matches on criminal behavior in the top three divisions of German professional soccer.
 data: panel data set (daily and municipality information)
 I compare the level of assaults on days with and without home games while controlling for any potential source of heterogeneity across days of the week, month, and year, holidays, ... Can I use that?
@@ -231,21 +233,13 @@ I compare the level of assaults on days with and without home games while contro
 
 % mechanism
 		
+		
+		
+		
+\newpage		
 % back of envelope calculations
-
-
-
-back-of-the envelope calculations based on my estimates indicate that the crime effects of football games are substantial. For example, soccer games explain 17.7 percent of the assault reports and lead to 18,770 additional assaults in the soccer season of 2014/15.\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the season 2014/15 is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} \cite{glaubitz2016kostet}  estimate the social cost of an assault at 5,067 euros.\footnote{The estimated cost is in 2020 prices.} 
-
-
-
-- back of envelope: 
-
-	* annual social cost of x euros (number of add. assaults * estimated social cost)
+Back-of-the envelope calculations based on my estimates indicate that the crime effects of football games are substantial. For example, soccer games in the first three leagues of the German Football league system explain 17.7 percent of the assault reports and lead to 18,770 additional assaults in the soccer season of 2014/15.\footnote{These calculations are based on an estimated reduction in assaults per million population per day, 335 days of the football season, and a population of 20,93 million in the affected regions. The number of prevented assaults for the season 2014/15 is: $2.677 \times 335 \times \frac{20,930,000}{1,000,000} = 18,770.$} \cite{glaubitz2016kostet} estimate the social cost of an assault at 5,067 euros (in 2020 prices), this implies an annual social cost of 95 million euros.\footnote{The costs of assaults vary greatly around the globe. In the US, the social costs of an assault range from 17,300 to 68,000 euros \citep{miller1996victim,cohen2004willingness}. In New Zealand the estimated social costs are 6,400 euros \citep{roper2006estimating}, and in GB the estimated costs are 2,300 euros \citep{dubourg2005economic}. All costs are in 2014 prices.}
 	
-
-\footnote{costs of assaults vary internationally USA: 17,300-68,000 euros \citep{miller1996victim,cohen2004willingness}, New Zealand: 6,400 euros \citep{roper2006estimating}, and in GB: 2,300 euros \citep{dubourg2005economic}
-prices in 2014 prices. }	
 
 
 % Literature
